# Obsidian-attachments-voyager

./: .gitignore  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
docs/: user-guide-en.md  user-guide-zh.md
docs/maintenance/: wry-linux-patch.md
docs/plans/: 2026-03-03-expanded-ux-ops-design.md  2026-03-03-expanded-ux-ops-implementation.md  2026-03-03-frontend-functionality-fix-implementation.md  2026-03-03-gallery-thumbnails-cache-clear.md  2026-03-03-obsidian-attachments-voyager-design.md  2026-03-03-obsidian-attachments-voyager-fix-implementation.md  2026-03-03-selective-fix-implementation.md  2026-03-04-perf-stats-webp-design.md  2026-03-04-phase1-layout-restyle.md  2026-03-04-ui-overhaul-design.md  2026-03-05-in-app-feature-guidance-design.md  2026-03-05-in-app-feature-guidance.md  2026-03-06-separate-gallery-thumbnail-cache-design.md  2026-03-06-separate-gallery-thumbnail-cache.md  2026-03-07-security-hardening-design.md  2026-03-07-security-hardening.md  2026-03-14-next-phase-roadmap-design.md
gemini-Fronted-files/: FRONTEND-FIX-DESIGN.md  GEMINI-FRONTEND-HANDOFF.md
scripts/: build-all.ps1  build-all.sh  check-build-scripts.sh  check-docs.sh  generate-icons.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: diagnostic_log.rs  fix_plan.rs  main.rs  migrate.rs  models.rs  ops_log.rs  parser.rs  runtime_log.rs  scanner.rs  startup_diag.rs  thumb_cache.rs
(+45 files in other folders)
