[package]
name = "obsidian-attachments-voyager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.5.0", features = ["api-all"] }
walkdir = "2.5.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]

